2011-08-05  Corinna Vinschen  <corinna@vinschen.de>

	Correct some misspelled manifest constant names.

	* include/winnt.h (IMAGE_DLL_CHARACTERISTICS_NX_COMPAT): Should be...
	(IMAGE_DLLCHARACTERISTICS_NX_COMPAT): ...this; define correctly; also
	alias to original misspelling, to maintain backward compatibility.
	(IMAGE_DLL_CHARACTERISTICS_FORCE_INTEGRITY): Likewise; should be...
	(IMAGE_DLLCHARACTERISTICS_FORCE_INTEGRITY): ...this; define and alias.
	(IMAGE_DLL_CHARACTERISTICS_DYNAMIC_BASE): Likewise; should be...
	(IMAGE_DLLCHARACTERISTICS_DYNAMIC_BASE): ...this; define and alias.

2011-07-29  Corinna Vinschen  <corinna@vinschen.de>

	Add a missing Win2K sockets IOCTL feature.

	* include/winsock2.h (SIO_UDP_CONNRESET): Define.

2011-05-22  Albrecht Schlosser  <vms-news@go4more.de>

	Fix an incorrectly typed structure member.

	* include/wingdi.h (GCP_RESULTSW): lpClass field defined as LPWSTR;
	should be LPSTR; correct it.

2011-05-15  Corinna Vinschen  <corinna@vinschen.de>

	Add another missing manifest constant definition.

	* include/winbase.h (STACK_SIZE_PARAM_IS_A_RESERVATION): Define.

2011-04-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid pollution of user namespace; fix MinGW-Bug [#1531].

	* include/windef.h (PACKED): Delete macro definition; its name is not
	reserved, and may thus conflict with a user defined name; replace it...
	* include/wincon.h (KEY_EVENT_RECORD): ...at this sole point of use;
	use __attribute__((packed)) directly instead.

2011-04-21  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Fix bad typedef, per MinGW-Bug [#1529].

	* include/imagehlp.h (PREAD_PROCESS_MEMORY_ROUTINE): Corrected, to
	conform with MSDN reference, as identified by Safety0ff.

2011-04-04  Corinna Vinschen  <corinna@vinschen.de>

	Add a missing manifest constant definition.

	* include/winnt.h (DOMAIN_ALIAS_RID_REMOTE_DESKTOP_USERS): Define.

2011-03-29  Corinna Vinschen  <corinna@vinschen.de>

	Win2K and Vista userenv updates.
