@@ -2491,10 +2491,16 @@ extern "C" {
 #define TOUCHEVENTF_PRIMARY	    0x0010
 #define TOUCHEVENTF_UP	        0x0004
 
-#define TOUCHEVENTMASKF_CONTACTAREA	    0x0004
-#define TOUCHEVENTMASKF_EXTRAINFO	    0x0002
+#define TOUCHEVENTMASKF_CONTACTAREA	0x0004
+#define TOUCHEVENTMASKF_EXTRAINFO	0x0002
 #define TOUCHEVENTMASKF_TIMEFROMSYSTEM	0x0001
 #endif
+
+#define MAPVK_VK_TO_VSC 	0
+#define MAPVK_VSC_TO_VK 	1
+#define MAPVK_VK_TO_CHAR	2
+#define MAPVK_VSC_TO_VK_EX	3
+#define MAPVK_VK_TO_VSC_EX	4
 
 #ifndef RC_INVOKED
 typedef BOOL(CALLBACK *DLGPROC)(HWND,UINT,WPARAM,LPARAM);
